syntax = "proto3";

option csharp_namespace = "Shared.Contracts.TeamService";

import "team_service_contracts.proto";

service TeamCrud {
  // Получение команд по фильтрам и с классической пагинацией
  rpc ReadManyTeamsByOffset (ReadManyTeamsByOffsetGrpcRequest) returns (ReadManyTeamsByOffsetGrpcResponse);
  // Получение команд по фильтрам и с курсорной пагинацией
  rpc ReadManyTeamsByCursor (ReadManyTeamsByCursorGrpcRequest) returns (ReadManyTeamsByCursorGrpcResponse);
  // Получение команды по id
  rpc ReadOneTeamById (ReadOneTeamByIdGrpcRequest) returns (ReadOneTeamByIdGrpcResponse);
  // Создание команды
  rpc CreateTeam (CreateTeamGrpcRequest) returns (CreateTeamGrpcResponse);
  // Обновление команды
  rpc UpdateTeam (UpdateTeamGrpcRequest) returns (UpdateTeamGrpcResponse);
  // Удаление команды
  rpc DeleteTeam (DeleteTeamGrpcRequest) returns (DeleteTeamGrpcResponse);
}